# Theory-of-artificial-neural-networks

./: .gitignore  README.md
lab3/: aux.py  gen_alg.py  main.py  optimization1.py
laba 1/: CMakeLists.txt  Func_image.cpp  Func_image.h  Neron.cpp  Neron.h  main.cpp  matplotlibcpp.h
laba 2/: CMakeLists.txt  Layer.cpp  Layer.h  Mnist.h  Neron.cpp  Neron.h  Network.cpp  Network.h  main.cpp
laba2_matrix/: CMakeLists.txt  Layer.cpp  Layer.h  Mnist.cpp  Network.cpp  Network.h  main.cpp
network/: ActivateFunction.cpp  ActivateFunction.h  CMakeLists.txt  NetWork.cpp  NetWork.h  main.cpp  source.cpp
